# benc

./: CMakeLists.txt  Makefile  Makefile_old  README.md  linuxmint.json  testinput.txt
include/: benc.hpp
include/benc/: benc.hpp
src/: CMakeLists.txt  benc.cpp  decoder.cpp  encoder.cpp  tree.cpp
